use I_URL caracteristic to identify URL